修改了静态资源

--- a/application/resume/view/Index/home.html
+++ b/application/resume/view/Index/home.html
@@ -43,8 +43,8 @@
                                             <img src="/static/resume/images/banner.jpg" alt=" " class="img-responsive" />
                                             <div class="wthree_tab_content_pos1">
                                                 <ul>
-                                                    <li><a href="#" class="facebook"></a></li>
-                                                    <li><a href="#" class="twitter"></a></li>
+                                                    <li><a href="#" class="QQ"></a></li>
+                                                    <li><a href="#" class="weibo"></a></li>
                                                     <li><a href="#" class="g"></a></li>
                                                 </ul>
                                             </div>
@@ -184,8 +184,8 @@
                                             <div class="agileits_agile_about_portfolio">
                                                 <div class="col-md-4 agileits_agile_about_portfolio_left">
                                                     <div class="w3_portfolio_grid view second-effect">
-                                                        <a href="/static/resume/images/2.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">
-                                                            <img src="/static/resume/images/2.jpg" alt=" " class="img-responsive" />
+                                                        <a href="/static/resume/images/sanyibao-big.png" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non.">
+                                                            <img src="/static/resume/images/sanyibao.png" alt=" " class="img-responsive" />
                                                             <div class="mask">
                                                                 <p>Modern CV</p>
                                                             </div>
